fix Employee Overview now correctly uses observable list