@@ -10,21 +10,29 @@ import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
 import persistence.UserDao;
 
+import java.util.List;
 import java.util.Objects;
+import java.util.stream.Collectors;
 
 public class UserController {
 
     private final UserDao userDao;
     private User user;
+    private int supplierId;
+    private ObservableList<UserDTO> userList = FXCollections.emptyObservableList();
 
     public UserController(UserDao userDao) {
         this.userDao = userDao;
     }
 
     public ObservableList<UserDTO> getEmployees() {
-        return FXCollections.observableArrayList(userDao.getAllForSupplier(user.getSupplier().getSupplierId()).stream().map(UserDTO::new).toList());
+        if (userList.isEmpty() || supplierId != supplierIdFromUser()) {
+            supplierId = supplierIdFromUser();
+            this.userList = FXCollections.observableList(userDao.getAllForSupplier(user.getSupplier().getSupplierId()).stream().map(UserDTO::new).collect(Collectors.toList()));
+        }
+        return this.userList;
     }
-    
+
     public void checkUser(String accountName, String password) throws EntityNotFoundException, IncorrectPasswordException, EntityDoesntExistException {
         User fromDatabase = userDao.get(accountName);
         if(fromDatabase==null)
@@ -37,11 +45,11 @@ public class UserController {
     public boolean userIsAdmin() {
         return user.isAdmin();
     }
-    
+
     public Supplier getSupplier() {
     	return user.getSupplier();
     }
-    
+
     public int userId () {
     	return user.getUserId();
     }
@@ -52,22 +60,21 @@ public class UserController {
 
     public void addUser(String email, String surName, String name, String tp, String mp, String funcion, String street, int number,
     		String box, String city, String pc, String counrty, Supplier supplier) throws NumberFormatException, UserAlreadyExistsExeption, InvalidNameException {
-    	    	
+
     	if(userDao.exists(email)) throw new UserAlreadyExistsExeption();
-    	
-    	userDao.insert(new User(
-            email, "test", Objects.equals(funcion, "admin"), surName, name, tp, mp, street, number, box, city, pc, counrty, supplier
-    	));
-    	
+
+        User user = new User(email, "test", Objects.equals(funcion, "admin"), surName, name, tp, mp, street, number, box, city, pc, counrty, supplier);
+    	userDao.insert(user);
+    	userList.add(new UserDTO(user));
     }
-    
+
     public void updateUser(String email, String surName, String name, String tp, String mp, String funcion, String street, int number,
     		String box, String city, String pc, String counrty) throws EntityNotFoundException, NumberFormatException {
-    	 	
+
     	if(email.isBlank() || email.isEmpty()) throw new IllegalArgumentException("Email mag niet leeg zijn");
-    	
+
     	User user = userDao.get(email);
-    	
+
     	user.setSurname(surName);
     	user.setName(name);
     	user.setTelephone(tp);
@@ -79,11 +86,20 @@ public class UserController {
     	user.setCity(city);
     	user.setPostalCode(pc);
     	user.setCountry(counrty);
-    	
+
     	userDao.update(user);
-    	
+        userList.set(getIndex(user.getUserId()), new UserDTO(user));
     }
-    
+
+    private int getIndex(int employeeId) {
+        List<UserDTO> correspondingDTOs = userList.stream().filter(dto -> dto.getEmployeeId() == employeeId).toList();
+        if (correspondingDTOs.isEmpty())
+            throw new IllegalArgumentException("There is no UserDTO matching this employeeId!");
+        if (correspondingDTOs.size() > 1)
+            throw new RuntimeException("There were multiple UserDTO found matching this employeeId!");
+        return userList.indexOf(correspondingDTOs.get(0));
+    }
+
     public String toString() {
     	return String.format("%s %s",user.getSurname(), user.getName());
     }
